--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
     <section class="container">
-        <img src="https://ca.slack-edge.com/T05FFAA91JP-U05R7SZTGKX-7efacfb076fb-512" alt="@Ifeanyi Moses"
+        <img src="https://ca.slack-edge.com/T05FFAA91JP-U05R7SZTGKX-7efacfb076fb-512" alt="Ifeanyi moses"
             data-testid="slackDisplayImage" />
 
-        <div data-testid="slackUserName">Slack Display Name: Ifeanyi Moses</div>
+        <div data-testid="slackUserName">Ifeanyi moses</div>
 
         <div id="dayOfTheWeek" data-testid="currentDayOfTheWeek"></div>
 
         <div id="currentUTCTime" data-testid="currentUTCTime"></div>
 
 
-        <div id="track" data-testid="myTrack">Track: Frontend</div>
+        <div id="track" data-testid="myTrack">Frontend</div>
 
         <div>
-            Github URL: <a
-                href="https://github.com/Moses-ifeanyi/slack-personal-hngx">https://github.com/Moses-ifeanyi/slack-personal-hngx</a>
+            <a
+                href="https://github.com/Moses-ifeanyi/slack-personal-hngx" data-testid="githubURL">https://github.com/Moses-ifeanyi/slack-personal-hngx</a>
         </div>
     </section>
 
