--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div id="currentUTCTime" data-testid="currentUTCTime"></div>
 
 
-        <div id="track" data-testid="myTrack">Frontend</div>
+        <div id="track" data-testid="myTrack">Track: Frontend</div>
 
         <div>
             <a
-                href="https://github.com/Moses-ifeanyi/slack-personal-hngx" data-testid="githubURL">https://github.com/Moses-ifeanyi/slack-personal-hngx</a>
+                href="https://github.com/Moses-ifeanyi/slack-personal-hngx" data-testid="githubURL">Github page</a>
         </div>
     </section>
 
