reverted to old changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="currentUTCTime" data-testid="currentUTCTime"></div>
 
 
-        <div id="track" data-testid="myTrack">Frontend</div>
+        <div id="track" data-testid="myTrack">Track: Frontend</div>
 
         <div>
             <a
